:sparkles: Add Album Show API
